force-app/main/default/objects/Form_Section__c/Form_Section__c.object-meta.xml
<CustomObject>
    <label>Form Section</label>
    <pluralLabel>Form Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Section Name</label>
    <type>Text</type>
</nameField>
</CustomObject>