force-app/main/default/objects/Form_Section__c/fields/Conditional_Display_Rule__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Display_Rule__c</fullName>
    <label>Conditional Display Rule</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>