force-app/main/default/objects/Form_Section__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>