force-app/main/default/objects/Form_Section__c/fields/Template_Version__c.field-meta.xml
    <CustomField>
        <fullName>Template_Version__c</fullName>
        <label>Template Version</label>
        <type>MasterDetail</type>
        <referenceTo>Form_Template_Version__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
<relationshipOrder>0</relationshipOrder>
    </CustomField>